# Boundary_problem

./: flake.nix
cpp/: CMakeLists.txt  bvp_solver.hpp  main.cpp
cpp/.cache/clangd/index/: bvp_solver.hpp.BA8C433E31D2CF6C.idx  main.cpp.C08987725E4309A8.idx
py/: bvp_solver.py  demo.py
